# ndk-cookbook

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Makefile  mymath.c  native-lib.cpp
app/src/main/cpp/include/: mymath.h
app/src/main/cpp/ndk-build/FreeImage/: Makefile.gnu  build_freeimage_android.sh
app/src/main/cpp/ndk-build/build-boringssl/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
app/src/main/cpp/ndk-build/build-boringssl/ssl/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/src/main/java/com/example/myndk/: MainActivity.java
